--- a/docker/services/frontend/html/config-rag.html
+++ b/docker/services/frontend/html/config-rag.html
@@ -591,10 +591,46 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <a href="/" class="back-link">&#8592; Dashboard</a>
-            <span class="header-title">RAG Service - Konfiguration</span>
-            <span class="service-badge" id="service-status">Laden...</span>
+        <div class="container" style="flex-direction: column; gap: 0.5rem;">
+            <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                <a href="/" class="back-link">← Dashboard</a>
+                <h1 class="header-title">🔍 RAG Service</h1>
+                <span class="service-badge" id="service-status">Laden...</span>
+            </div>
+            <!-- Compact Header Status Bar -->
+            <div style="display: flex; gap: 1.5rem; align-items: center; flex-wrap: wrap; font-size: 0.85rem; padding-top: 0.5rem; border-top: 1px solid rgba(255,255,255,0.1);">
+                <div style="display: flex; align-items: center; gap: 0.4rem;" title="Service-Status">
+                    <span>⏳</span>
+                    <span style="color: #888;">Status:</span>
+                    <strong id="headerStatus" style="color: #4caf50;">Lädt...</strong>
+                </div>
+                <div style="display: flex; align-items: center; gap: 0.4rem;" title="Service-Version">
+                    <span>📦</span>
+                    <span style="color: #888;">Version:</span>
+                    <strong id="headerVersion" style="color: #64c8ff;">-</strong>
+                </div>
+                <div style="display: flex; align-items: center; gap: 0.4rem;" title="Anzahl Dokumente im Index">
+                    <span>📄</span>
+                    <span style="color: #888;">Dokumente:</span>
+                    <strong id="headerDocs" style="color: #64c8ff;">-</strong>
+                </div>
+                <div style="display: flex; align-items: center; gap: 0.4rem;" title="Anzahl Dokumenttypen">
+                    <span>📁</span>
+                    <span style="color: #888;">Typen:</span>
+                    <strong id="headerTypes" style="color: #64c8ff;">-</strong>
+                </div>
+                <div style="display: flex; align-items: center; gap: 0.4rem;" title="Embedding Dimension">
+                    <span>🧠</span>
+                    <span style="color: #888;">Dimension:</span>
+                    <strong id="headerDimension" style="color: #64c8ff;">-</strong>
+                </div>
+                <div style="display: flex; align-items: center; gap: 0.4rem;" title="Zeit seit Service-Start">
+                    <span>🕐</span>
+                    <span style="color: #888;">Uptime:</span>
+                    <strong id="headerUptime" style="color: #64c8ff;">-</strong>
+                </div>
+                <button class="btn btn-primary" onclick="updateHeaderStatus()" style="margin-left: auto; padding: 0.3rem 0.6rem; font-size: 0.8rem;">↻</button>
+            </div>
         </div>
     </header>
 
@@ -1011,6 +1047,86 @@
         let filteredDocuments = [];
         let currentPage = 1;
         let schedulerInterval = null;
+        let serviceStartTime = null;
+
+        // ==================== Header Status Functions ====================
+
+        async function updateHeaderStatus() {
+            try {
+                // Fetch health info
+                const healthResponse = await fetch(`${API_BASE.replace('/api/v1', '')}/health`);
+                const healthData = await healthResponse.json();
+
+                // Update status
+                const statusEl = document.getElementById('headerStatus');
+                const badgeEl = document.getElementById('service-status');
+                if (healthData.status === 'healthy') {
+                    statusEl.textContent = 'Online';
+                    statusEl.style.color = '#4caf50';
+                    badgeEl.textContent = 'Online';
+                    badgeEl.classList.remove('offline');
+                } else {
+                    statusEl.textContent = 'Offline';
+                    statusEl.style.color = '#f44336';
+                    badgeEl.textContent = 'Offline';
+                    badgeEl.classList.add('offline');
+                }
+
+                // Update version
+                document.getElementById('headerVersion').textContent = healthData.version || '-';
+
+                // Fetch stats
+                try {
+                    const statsRes = await fetch(`${API_BASE}/rag/stats`);
+                    const stats = await statsRes.json();
+                    document.getElementById('headerDocs').textContent = stats.total_documents || '0';
+                    document.getElementById('headerTypes').textContent = stats.document_types ? Object.keys(stats.document_types).length : '-';
+                    document.getElementById('headerDimension').textContent = stats.embedding_dimension || '-';
+                } catch (e) {
+                    document.getElementById('headerDocs').textContent = '-';
+                    document.getElementById('headerTypes').textContent = '-';
+                    document.getElementById('headerDimension').textContent = '-';
+                }
+
+                // Calculate uptime
+                if (!serviceStartTime) {
+                    serviceStartTime = Date.now();
+                }
+                updateUptime();
+
+            } catch (error) {
+                console.error('Error updating header status:', error);
+                document.getElementById('headerStatus').textContent = 'Offline';
+                document.getElementById('headerStatus').style.color = '#f44336';
+                document.getElementById('service-status').textContent = 'Offline';
+                document.getElementById('service-status').classList.add('offline');
+            }
+        }
+
+        function updateUptime() {
+            if (!serviceStartTime) return;
+            const diff = Date.now() - serviceStartTime;
+            const seconds = Math.floor(diff / 1000);
+            const minutes = Math.floor(seconds / 60);
+            const hours = Math.floor(minutes / 60);
+            const days = Math.floor(hours / 24);
+
+            let uptimeStr;
+            if (days > 0) {
+                uptimeStr = `${days}d ${hours % 24}h`;
+            } else if (hours > 0) {
+                uptimeStr = `${hours}h ${minutes % 60}m`;
+            } else {
+                uptimeStr = `${minutes}m ${seconds % 60}s`;
+            }
+            document.getElementById('headerUptime').textContent = uptimeStr;
+        }
+
+        // Update uptime every second
+        setInterval(updateUptime, 1000);
+
+        // Initial header status load
+        updateHeaderStatus();
 
         // Tab switching
         function switchTab(tabName) {
